# TesPy

./: .gitignore  BULK.processJobs.py  LICENSE.md  README.md  config.toml.example  fetchRO.js  interface.py  main.py  pyproject.toml
