[tool.poetry]
name = "tespy"
version = "0.1.0"
description = "An Enhancement Suite for Tesseract Stock Management System"
authors = ["Kieran Wynne <keewynne90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
