[tool.poetry]
name = "tespy"
version = "0.1.0"
description = "An Enhancement Suite for Tesseract Stock Management System"
authors = ["Kieran Wynne <keewynne90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
requests = "^2.28.1"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
